[FINNA-1886] Fix icon not displayed on mobile in gallery view (#2874)

--- a/themes/finna2/less/global/icons.less
+++ b/themes/finna2/less/global/icons.less
@@ -293,9 +293,6 @@ table .iconlabel {
         width: 100%;
         min-width: 100px;
     }
-    @media (max-width:@screen-xs-max) {
-        display: none;
-    }
     & .iconlabel {
         display: block;
     }
